# TalkSpace

./: Cargo.toml  README.md  test_querryes.md
client/: auth.js  client.js  index.html  login.js  router.js
client_talk_space/: .env.local.example  index.html  package.json  pnpm-lock.yaml
client_talk_space/src/: App.tsx  auth.ts  router.tsx  vars.ts
client_talk_space/src/components/: Login.tsx  VoiceChannel.tsx
migrations/: 001_create_users_table.sql
src/: main.rs  routes.rs
src/handlers/: mod.rs  ws_handler.rs
src/middleware/: jwt_middleware.rs
src/models/: voice_channel.rs
talk_space_server/: .env.example  Cargo.toml  README.md
talk_space_server/migrations/: 002_create_voice_channels.sql  003_create_voice_channel_members.sql
talk_space_server/src/: cors.rs  db.rs  main.rs  routes.rs
talk_space_server/src/handlers/: mod.rs  user_handler.rs  voice_channel_handler.rs  ws_handler.rs
talk_space_server/src/middleware/: jwt_middleware.rs
talk_space_server/src/models/: mod.rs  user.rs
